        ADDED - New LINKSTYLE command allows you to have one-way (one arrow) links.
        ADDED - RRD DS can use Cacti's poller_output to get data without running RRDtool at all.
                (this also means it can work with the Boost plugin for large installations)
                See targets.html for more info on this one.
	FIXED - "Full Screen Maps" mode in Cacti Plugin was broken by me adding the "View Only First" mode.
                
0.93    Added - weathermap-cacti-plugin.php?action=viewmap&id=mapfilename  works as well as a map number - useful for crosslinks
        FIXED - the key_hidezero secret setting hides the zero in a gradient in a classic scale too.
        CHANGE - the auth realm names for Cacti have been changed to match ReportIt and Aggregate - easier to tell who does what
        ADDED - unique code for each warning message, and a page to explain it on the website. Ugh.
        ADDED - warning in editor file-selector so you can tell if the file is read-only
	ADDED - click config filename to edit in editor from Cacti (thanks to streaker69)
        FIXED - editor-generated node names are a bit shorter (and easier to read) now.
        FIXED - keyboard focus switches nicely to the popup dialogs now.
        ADDED - cactihost: DS plugin fetches a bunch of other stats from Cacti's DB now, too (like availability and response times)
        ADDED - Picking Cacti sources from editor has a javascript "live filter" feature now (needs a little work)
        ADDED - node coordinates are directly editable in the editor now
        ADDED - File picker allows you to use an existing map as a template
        CHANGE - Editor warns about older editor-config.php format now
        ADDED - Editor now allows you to clone a node with all it's styling intact.
        ADDED - When picking coordinates (new node, move node, move timestamp etc), you can see the coordinates
        ADDED - Editor toolbar fixed to window, to make it easier to scroll around large maps