@@ -1,4 +1,4 @@
-# Automatically generated by php-weathermap v0.93
+# Automatically generated by php-weathermap v0.94dev
 
 WIDTH 800
 HEIGHT 600
@@ -1517,6 +1517,7 @@ LINK link108
 LINK lnk109
 	TARGET ../../rra/localhost_traffic_in_17.rrd
 	NODES centre edge109
+	VIA 349 313
 
 LINK link109
 	TARGET ../../rra/localhost_traffic_in_17.rrd
